test/tasty/pos/src-3/tastytest/basicAnnot.scala
package tastytest

final class basicAnnot[T](member: T) extends scala.annotation.StaticAnnotation
